
1.2b3
- Refactored preferences to look better, be cleaner and allow setting a default value for "follow playback"
- Updated render code in hope to fix rounding errors on some graphics card
- Fixed items wrongly disabled in key picker
- Dynamic repartition of height when printing

1.2b2
- Fixed issues with track reordering
- Magnetic grid choice done with icons instead of text
- Improved score printing (nicer-looking, both F and G clefs supported, adaptable height, notes above or below score, fixed crashes...)
- Fixed bug in score printing where the first page would be a bunch filled with garbage
- G or F clef view preference saved
- Improved display and printing of ties on chords
- Fixed bug with magnetic grid when using manual measure management + a very small measure (e.g. 1/16)
- Code cleanup

1.2b1
- Added ability to print more than one track at once
- Allowed showing only G or F clef
- Support for moving score one octave up or down
- Initial support for score printing
- Fixed improper handling of accidentals
- Fixed default suggested name when exporting to PDF on mac OS X
- Fixed odd-numbered time signatures like 9/8
- Reworked beaming code, resulting in nicer beams in some cases
- Added DropD-bass tuning preset, cleaned up code
- Improved printing output by putting a bigger centered title on first page.
- Fixed glitches in score editor settings
- Fixed wrong rythm on playback caused by improper ordering of note off events
- Nicer-looking ties in score editor
- New toolbar layout
- Major code cleanup in measure handling code
- Major code cleanup in track widgets
- More automatic memory management, improved leak checks
- Fixed memory leaks

1.1.3
- improved vector implementation, fixing possible problems on 64-bits machines
- improved 'follow playback'
- added warning message when adding too many tracks
- always play note on click
- fixed file name being used over song name when printing tablature