@@ -4,6 +4,7 @@
 - Updated render code in hope to fix rounding errors on some graphics card
 - Fixed items wrongly disabled in key picker
 - Dynamic repartition of height when printing
+- Don't give error messages when cancelling printing
 
 1.2b2
 - Fixed issues with track reordering
